--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,33 @@
-buildscript {
-	ext {
-		springBootVersion = '2.0.7.RELEASE'
-	}
+
+allprojects {
+    ext {
+        springBootVersion = '2.0.7.RELEASE'
+    }
+	apply plugin: 'java'
+    apply plugin: 'idea'
+
+
+	// JVM 版本号要求
+	sourceCompatibility = 1.8
+	targetCompatibility = 1.8
+
+	group = 'com.github.bjlhx15.gradle'
+	version = '0.0.1-SNAPSHOT'
+
+	// java编译的时候缺省状态下会因为中文字符而失败
+	[compileJava,compileTestJava,javadoc]*.options*.encoding = 'UTF-8'
+
 	repositories {
 		mavenCentral()
 	}
+
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		implementation 'org.springframework.boot:spring-boot-starter-web'
+		compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.0.7.RELEASE'
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	}
 }
 
-apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
 
-group = 'com.github.bjlhx15.gradle'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
 
-repositories {
-	mavenCentral()
-}
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
