--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'gradle-mvc4'
 
-include 'demo01-thymeleaf','demo02-thymeleaf-mvc'
+include 'demo01-thymeleaf','demo02-thymeleaf-mvc','demo03-jsr303'
