--- a/demo03-jsr303/build.gradle
+++ b/demo03-jsr303/build.gradle
@@ -19,5 +19,6 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.16.20'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
     compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
+    compile group: 'org.hibernate.validator', name: 'hibernate-validator', version: '6.0.13.Final'
 //    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
